src/views/login.css
.loginView {
    text-align: center;
    padding: 1em;
    display: flexbox;
}

.loginForm {
    width: -webkit-fill-available;
    display: block;
}

.loginLabel {
    width: -webkit-fill-available;
    display: block;
    margin-top: 1em;
    padding: 0.5em;
}

.loginInput {
    width: -webkit-fill-available;
    display: block;
    padding: 0.5em;
    border: 0px solid;
    border-bottom: 1px solid;
    border-radius: 0.2em;
}

.loginDivider {
    margin-top: 2em;
    margin-bottom: 2em;
    width: 100%;
}

.loginKnownConnectionButton {
    display: inline-flex;
    height: 10em;
    width: 10em;
    overflow: hidden;
    line-break: normal;
    align-items: center;
    justify-content: center;
    font-weight: bold;
    border-radius: var(--radius-large);
    color: var(--accent-1-fg);
    background-color: var(--accent-1-bg);
}

.loginKnownConnectionButton:hover {
    background-color: var(--accent-1-bg-hover);
}

